--- a/dashboard/user.html
+++ b/dashboard/user.html
@@ -63,13 +63,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="settings.html">
+                    <a href="stats.html">
                         <i class="pe-7s-graph3"></i>
                         <p>Statistics</p>
                     </a>
                 </li>
                 <li>
-                    <a href="typography.html">
+                    <a href="settings.html">
                         <i class="pe-7s-settings"></i>
                         <p>Settings</p>
                     </a>
