dropdown class selection

--- a/dashboard/stats.html
+++ b/dashboard/stats.html
@@ -37,7 +37,7 @@
     <div class="sidebar" data-color="purple">
         <div class="sidebar-wrapper">
             <div class="logo">
-                <a href="http://www.creative-tim.com" class="simple-text">
+                <a href="http://www.wits.ac.za" class="simple-text">
                     <img src="assets/img/wits-logo.png">
                 </a>
             </div>
