--- a/dashboard/grade.html
+++ b/dashboard/grade.html
@@ -84,19 +84,32 @@
             </div>
         </nav>
 
+        
+         <div class="dropdown" style="padding-left:30px;padding-top:10px">
+                <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Class
+                    <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a href="#">COMS1000</a></li>
+                    <li><a href="#">COMS2000</a></li>
+                    <li><a href="#">COMS3000</a></li>
+                </ul>
+        </div> 
+
+
         <div class="content">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="card">
                             <div class="header">
-                                <h4 class="title">Striped Table with Hover</h4>
-                                <p class="category">Here is a subtitle for this table</p>
+                                <h4 class="title">COMS1000</h4>
+                                
                             </div>
                             <div class="content table-responsive table-full-width">
                                 <table class="table table-hover table-striped">
                                     <thead>
-                                        <th>ID</th>
+                                        <th>Student Number</th>
                                     	<th>Name</th>
                                     	<th>Faculty</th>
                                     	<th>YOS</th>
@@ -104,70 +117,70 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                        	<td>1</td>
+                                        	<td>2000000</td>
                                         	<td>Dakota Rice</td>
                                         	<td>Science</td>
                                         	<td>2</td>
                                         	<td>76%</td>
                                         </tr>
                                         <tr>
-                                        	<td>2</td>
+                                        	<td>2000578</td>
                                         	<td>Minerva Hooper</td>
                                         	<td>Science</td>
                                         	<td>2</td>
                                         	<td>50%</td>
                                         </tr>
                                         <tr>
-                                        	<td>3</td>
+                                        	<td>2000999</td>
                                         	<td>Sage Rodriguez</td>
                                         	<td>Science</td>
                                         	<td>3</td>
                                         	<td>87%</td>
                                         </tr>
                                         <tr>
-                                        	<td>4</td>
+                                        	<td>2005890</td>
                                         	<td>Philip Chaney</td>
                                         	<td>Science</td>
                                         	<td>3</td>
                                         	<td>39%</td>
                                         </tr>
                                         <tr>
-                                        	<td>5</td>
+                                        	<td>2008293</td>
                                         	<td>Doris Greene</td>
                                         	<td>Science</td>
                                         	<td>3</td>
                                         	<td>57%</td>
                                         </tr>
                                         <tr>
-                                        	<td>6</td>
+                                        	<td>2009637</td>
                                         	<td>Mason Porter</td>
                                         	<td>Science</td>
                                         	<td>3</td>
                                         	<td>38%</td>
                                         </tr>
                                         <tr>
-                                            <td>7</td>
+                                            <td>2004785</td>
                                             <td>Johnny Depp</td>
                                             <td>Science</td>
                                             <td>3</td>
                                             <td>90%</td>
                                         </tr>
                                         <tr>
-                                            <td>8</td>
+                                            <td>2046759</td>
                                             <td>Aretha Franklin</td>
                                             <td>Humanities</td>
                                             <td>1</td>
                                             <td>94%</td>
                                         </tr>
                                         <tr>
-                                            <td>9</td>
+                                            <td>2138904</td>
                                             <td>James Dunn</td>
                                             <td>Humanities</td>
                                             <td>1</td>
                                             <td>28%</td>
                                         </tr>
                                         <tr>
-                                            <td>10</td>
+                                            <td>2289304</td>
                                             <td>Harry Potter</td>
                                             <td>Humanities</td>
                                             <td>1</td>
