dahsboard update no stipe for table

--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -96,8 +96,8 @@
                                      <a href="#">
                                     <img class="avatar border-gray" src="assets/img/faces/face-3.jpg" alt="..."/>
 
-                                      <h4 class="title">Drake<br />
-                                         <small>765636</small>
+                                      <h4 class="title">Phillip Chaney<br />
+                                         <small>2005890</small>
                                       </h4>
                                     </a>
                                 </div>
@@ -134,7 +134,7 @@
                                 
                             </div>
                             <div class="content table-responsive table-full-width">
-                                <table class="table table-hover table-striped">
+                                <table class="table table-hover">
                                     <thead>
                                         <th>ID</th>
                                         <th>Name</th>
@@ -164,7 +164,7 @@
                                             <td>3</td>
                                             <td>87%</td>
                                         </tr>
-                                        <tr>
+                                        <tr class="active">
                                             <td>4</td>
                                             <td>Philip Chaney</td>
                                             <td>Science</td>
