--- a/dashboard/grade.html
+++ b/dashboard/grade.html
@@ -51,7 +51,7 @@
                         <p>Dashboard</p>
                     </a>
                 </li>
-                <li>
+                <li class="active">
                     <a>
                         <i class="pe-7s-note2"></i>
                         <p>Grade Book</p>
@@ -107,7 +107,7 @@
                                 
                             </div>
                             <div class="content table-responsive table-full-width">
-                                <table class="table table-hover table-striped">
+                                <table class="table table-hover">
                                     <thead>
                                         <th>Student Number</th>
                                     	<th>Name</th>
