made phillip active

--- a/dashboard/grade.html
+++ b/dashboard/grade.html
@@ -137,7 +137,7 @@
                                         	<td>3</td>
                                         	<td>87%</td>
                                         </tr>
-                                        <tr>
+                                        <tr class="active">
                                         	<td>2005890</td>
                                         	<td>Philip Chaney</td>
                                         	<td>Science</td>
