--- a/dashboard/grade.html
+++ b/dashboard/grade.html
@@ -122,6 +122,7 @@
                                         	<td>Science</td>
                                         	<td>2</td>
                                         	<td>76%</td>
+                                            <td><a href="dashboard.html" type="button" class="btn btn-light btn-sm">Load Student</a></td>
                                         </tr>
                                         <tr>
                                         	<td>2000578</td>
@@ -129,6 +130,7 @@
                                         	<td>Science</td>
                                         	<td>2</td>
                                         	<td>50%</td>
+                                            <td><a href="dashboard.html" type="button" class="btn btn-light btn-sm">Load Student</a></td>
                                         </tr>
                                         <tr>
                                         	<td>2000999</td>
@@ -136,6 +138,7 @@
                                         	<td>Science</td>
                                         	<td>3</td>
                                         	<td>87%</td>
+                                            <td><a href="dashboard.html" type="button" class="btn btn-light btn-sm">Load Student</a></td>
                                         </tr>
                                         <tr class="active">
                                         	<td>2005890</td>
@@ -143,6 +146,7 @@
                                         	<td>Science</td>
                                         	<td>3</td>
                                         	<td>39%</td>
+                                            <td><a href="dashboard.html" type="button" class="btn btn-light btn-sm">Load Student</a></td>
                                         </tr>
                                         <tr>
                                         	<td>2008293</td>
@@ -150,6 +154,7 @@
                                         	<td>Science</td>
                                         	<td>3</td>
                                         	<td>57%</td>
+                                            <td><a href="dashboard.html" type="button" class="btn btn-light btn-sm">Load Student</a></td>
                                         </tr>
                                         <tr>
                                         	<td>2009637</td>
@@ -157,6 +162,7 @@
                                         	<td>Science</td>
                                         	<td>3</td>
                                         	<td>38%</td>
+                                            <td><a href="dashboard.html" type="button" class="btn btn-light btn-sm">Load Student</a></td>
                                         </tr>
                                         <tr>
                                             <td>2004785</td>
@@ -164,6 +170,7 @@
                                             <td>Science</td>
                                             <td>3</td>
                                             <td>90%</td>
+                                            <td><a href="dashboard.html" type="button" class="btn btn-light btn-sm">Load Student</a></td>
                                         </tr>
                                         <tr>
                                             <td>2046759</td>
@@ -171,6 +178,7 @@
                                             <td>Humanities</td>
                                             <td>1</td>
                                             <td>94%</td>
+                                            <td><a href="dashboard.html" type="button" class="btn btn-light btn-sm">Load Student</a></td>
                                         </tr>
                                         <tr>
                                             <td>2138904</td>
@@ -178,6 +186,7 @@
                                             <td>Humanities</td>
                                             <td>1</td>
                                             <td>28%</td>
+                                            <td><a href="dashboard.html" type="button" class="btn btn-light btn-sm">Load Student</a></td>
                                         </tr>
                                         <tr>
                                             <td>2289304</td>
@@ -185,6 +194,7 @@
                                             <td>Humanities</td>
                                             <td>1</td>
                                             <td>80%</td>
+                                            <td><a href="dashboard.html" type="button" class="btn btn-light btn-sm">Load Student</a></td>
                                         </tr>
                                     </tbody>
                                 </table>
