--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8" />
 	<link rel="icon" type="image/png" href="assets/img/favicon.ico">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+	<link rel="icon" type="image/png" href="../img/favicon.png">
 
 	<title>Dashboard</title>
 
