removed mark picture and added table

--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -115,16 +115,50 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="card">
+                        <<div class="card">
                             <div class="header">
-                                <h4 class="title">Latest Results</h4>
+                                <h4 class="title">Class List</h4>
                                 
                             </div>
-                            <div class="content">
-                                <div class="ct-chart">
-                                    <img src="assets/img/mark-data.png">
-                                </div>
-                                
+                            <div class="content table-responsive table-full-width">
+                                <table class="table table-hover">
+                                    <thead>
+                                        <th>Subject</th>
+                                        <th>Subject Code</th>
+                                        <th>Mark (%)</th>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>1</td>
+                                            <td>Dakota Rice</td>
+                                            <td>Science</td>
+                                            <td>2</td>
+                                            <td>76%</td>
+                                        </tr>
+                                        <tr>
+                                            <td>2</td>
+                                            <td>Minerva Hooper</td>
+                                            <td>Science</td>
+                                            <td>2</td>
+                                            <td>50%</td>
+                                        </tr>
+                                        <tr>
+                                            <td>3</td>
+                                            <td>Sage Rodriguez</td>
+                                            <td>Science</td>
+                                            <td>3</td>
+                                            <td>87%</td>
+                                        </tr>
+                                        <tr class="active">
+                                            <td>4</td>
+                                            <td>Philip Chaney</td>
+                                            <td>Science</td>
+                                            <td>3</td>
+                                            <td>39%</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+
                             </div>
                         </div>
                     </div>
