removed mark picture and added table

--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -117,7 +117,7 @@
                     <div class="col-md-4">
                         <<div class="card">
                             <div class="header">
-                                <h4 class="title">Class List</h4>
+                                <h4 class="title">Latest Marks</h4>
                                 
                             </div>
                             <div class="content table-responsive table-full-width">
@@ -129,32 +129,24 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>1</td>
-                                            <td>Dakota Rice</td>
-                                            <td>Science</td>
-                                            <td>2</td>
-                                            <td>76%</td>
+                                            <td>Physics</td>
+                                            <td>PHYS1002</td>
+                                            <td>67</td>
                                         </tr>
                                         <tr>
-                                            <td>2</td>
-                                            <td>Minerva Hooper</td>
-                                            <td>Science</td>
-                                            <td>2</td>
-                                            <td>50%</td>
+                                            <td>Applied Mathematics</td>
+                                            <td>APPM1001</td>
+                                            <td>76</td>
                                         </tr>
                                         <tr>
-                                            <td>3</td>
-                                            <td>Sage Rodriguez</td>
-                                            <td>Science</td>
-                                            <td>3</td>
-                                            <td>87%</td>
+                                            <td>Computer Science</td>
+                                            <td>COMS1006</td>
+                                            <td>92</td>
                                         </tr>
-                                        <tr class="active">
-                                            <td>4</td>
-                                            <td>Philip Chaney</td>
-                                            <td>Science</td>
-                                            <td>3</td>
-                                            <td>39%</td>
+                                        <tr>
+                                            <td>Mathematics</td>
+                                            <td>MATH1010</td>
+                                            <td>78</td>
                                         </tr>
                                     </tbody>
                                 </table>
