--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -115,7 +115,7 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <<div class="card">
+                        <div class="card">
                             <div class="header">
                                 <h4 class="title">Latest Marks</h4>
                                 
