--- a/testing_login.html
+++ b/testing_login.html
@@ -22,6 +22,7 @@
 	<script type="text/javascript">
 		$(document).ready(function(){
 			LoginHeader()
+			LoginPageContent()
 		})
 	</script>
 </body>
