--- a/testing_login.html
+++ b/testing_login.html
@@ -21,6 +21,7 @@
 	<script type="text/javascript" src="js/functions.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function(){
+			DashboardRedirect()
 			LoginHeader()
 			LoginPageContent()
 		})
