--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -35,7 +35,7 @@
 <body>
 
 <div class="wrapper">
-    <div class="sidebar" data-color="purple">
+    <div class="sidebar" data-color="blue">
     	<div class="sidebar-wrapper">
             <div class="logo">
                 <a href="http://www.wits.ac.za" class="simple-text">
