added button for class to dahboard

--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -157,9 +157,20 @@
                     <div class="col-md-4">
                         <div class="card">
                             <div class="header">
-                                <h4 class="title">Class List</h4>
+                                <h4 class="title">COMS1001</h4>
                                 
                             </div>
+
+                            <div class="dropdown" style="padding-left:30px;padding-top:10px">
+                                <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Class
+                                    <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#">COMS1000</a></li>
+                                    <li><a href="#">COMS2000</a></li>
+                                    <li><a href="#">COMS3000</a></li>
+                                </ul>
+                             </div> 
                             <div class="content table-responsive table-full-width">
                                 <table class="table table-hover">
                                     <tr>
