Made dashboard class selector scrollab;e

--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -154,14 +154,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4" style="max-height: 350px;overflow:scroll">
                         <div class="card">
                             <div class="header">
                                 <h4 class="title">COMS1001</h4>
                                 
                             </div>
 
-                            <div class="dropdown" style="padding-left:30px;padding-top:10px">
+                            <div class="dropdown" style="padding-left:17px;padding-top:10px">
                                 <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Class
                                     <span class="caret"></span>
                                 </button>
