Made dashboard class selector scrollable

--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -87,7 +87,7 @@
         <div class="content">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-4" style="max-height: 400px;overflow:scroll">
                         <div class="card card-user">
                             <div class="image">
                                 <img src="https://ununsplash.imgix.net/photo-1431578500526-4d9613015464?fit=crop&fm=jpg&h=300&q=75&w=400" alt="..."/>
@@ -114,7 +114,7 @@
                             
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4" style="max-height: 400px;overflow:scroll">
                         <div class="card">
                             <div class="header">
                                 <h4 class="title">Latest Marks</h4>
@@ -154,7 +154,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4" style="max-height: 350px;overflow:scroll">
+                    <div class="col-md-4" style="max-height: 400px;overflow:scroll">
                         <div class="card">
                             <div class="header">
                                 <h4 class="title">COMS1001</h4>
@@ -171,7 +171,7 @@
                                     <li><a href="#">COMS3000</a></li>
                                 </ul>
                              </div> 
-                            <div class="content table-responsive table-full-width">
+                            <div class="content table-responsive table-full-width" style="max-height: 260px;overflow:scroll">
                                 <table class="table table-hover">
                                     <tr>
                                         <th>ID</th>
