changed load student in grade to more info

--- a/dashboard/grade.html
+++ b/dashboard/grade.html
@@ -120,7 +120,7 @@
                                         	<td>Science</td>
                                         	<td>2</td>
                                         	<td>76%</td>
-                                            <td><a href="dashboard.html" type="button" class="btn btn-light btn-sm">Load Student</a></td>
+                                            <td><a href="dashboard.html" type="button" class="btn btn-light btn-sm">More Info</a></td>
                                         </tr>
                                         <tr>
                                         	<td>2000578</td>
@@ -128,7 +128,7 @@
                                         	<td>Science</td>
                                         	<td>2</td>
                                         	<td>50%</td>
-                                            <td><a href="dashboard.html" type="button" class="btn btn-light btn-sm">Load Student</a></td>
+                                            <td><a href="dashboard.html" type="button" class="btn btn-light btn-sm">More Info</a></td>
                                         </tr>
                                         <tr>
                                         	<td>2000999</td>
@@ -136,7 +136,7 @@
                                         	<td>Science</td>
                                         	<td>3</td>
                                         	<td>87%</td>
-                                            <td><a href="dashboard.html" type="button" class="btn btn-light btn-sm">Load Student</a></td>
+                                            <td><a href="dashboard.html" type="button" class="btn btn-light btn-sm">More Info</a></td>
                                         </tr>
                                         <tr class="active">
                                         	<td>2005890</td>
@@ -144,7 +144,7 @@
                                         	<td>Science</td>
                                         	<td>3</td>
                                         	<td>39%</td>
-                                            <td><a href="dashboard.html" type="button" class="btn btn-light btn-sm">Load Student</a></td>
+                                            <td><a href="dashboard.html" type="button" class="btn btn-light btn-sm">More Info</a></td>
                                         </tr>
                                         <tr>
                                         	<td>2008293</td>
@@ -152,7 +152,7 @@
                                         	<td>Science</td>
                                         	<td>3</td>
                                         	<td>57%</td>
-                                            <td><a href="dashboard.html" type="button" class="btn btn-light btn-sm">Load Student</a></td>
+                                            <td><a href="dashboard.html" type="button" class="btn btn-light btn-sm">More Info</a></td>
                                         </tr>
                                         <tr>
                                         	<td>2009637</td>
@@ -160,7 +160,7 @@
                                         	<td>Science</td>
                                         	<td>3</td>
                                         	<td>38%</td>
-                                            <td><a href="dashboard.html" type="button" class="btn btn-light btn-sm">Load Student</a></td>
+                                            <td><a href="dashboard.html" type="button" class="btn btn-light btn-sm">More Info</a></td>
                                         </tr>
                                         <tr>
                                             <td>2004785</td>
@@ -168,7 +168,7 @@
                                             <td>Science</td>
                                             <td>3</td>
                                             <td>90%</td>
-                                            <td><a href="dashboard.html" type="button" class="btn btn-light btn-sm">Load Student</a></td>
+                                            <td><a href="dashboard.html" type="button" class="btn btn-light btn-sm">More Info</a></td>
                                         </tr>
                                         <tr>
                                             <td>2046759</td>
@@ -176,7 +176,7 @@
                                             <td>Humanities</td>
                                             <td>1</td>
                                             <td>94%</td>
-                                            <td><a href="dashboard.html" type="button" class="btn btn-light btn-sm">Load Student</a></td>
+                                            <td><a href="dashboard.html" type="button" class="btn btn-light btn-sm">More Info</a></td>
                                         </tr>
                                         <tr>
                                             <td>2138904</td>
@@ -184,7 +184,7 @@
                                             <td>Humanities</td>
                                             <td>1</td>
                                             <td>28%</td>
-                                            <td><a href="dashboard.html" type="button" class="btn btn-light btn-sm">Load Student</a></td>
+                                            <td><a href="dashboard.html" type="button" class="btn btn-light btn-sm">More Info</a></td>
                                         </tr>
                                         <tr>
                                             <td>2289304</td>
@@ -192,7 +192,7 @@
                                             <td>Humanities</td>
                                             <td>1</td>
                                             <td>80%</td>
-                                            <td><a href="dashboard.html" type="button" class="btn btn-light btn-sm">Load Student</a></td>
+                                            <td><a href="dashboard.html" type="button" class="btn btn-light btn-sm">More Info</a></td>
                                         </tr>
                                     </tbody>
                                 </table>
