Some work on the about page

--- a/team.html
+++ b/team.html
@@ -11,7 +11,9 @@
 <section class="w3-container w3-content w3-center" style="max-width:600px">
     <h2 class="w3-wide">ATOM</h2>
     <p class="w3-opacity"><i>COMS 3009 project</i></p>
-    This is is a web based application allowing lecturers to view students in their classes, view their respective marks and run a prediction algorithm to tell whether the student is at risk of failure so that systems can be put in place to prevent said student from failing.
+    This is is a web based application allowing lecturers to view students in their classes
+    , view their respective marks and run a prediction algorithm to tell whether the student is
+    at risk of failure so that systems can be put in place to prevent said student from failing.
 </section>
 
 <section class="w3-container w3-content w3-center" style="max-width:600px">
