Some work on the about page add the Design(GradeBook)

--- a/about.html
+++ b/about.html
@@ -48,7 +48,8 @@
     A block with a class list
     <h3></h3>
     A block with the predictor graph
-
+    <h2>GradeBook</h2>
+    Marks of students displayed in a spread sheet format
 </section>
 </body>
 </html>
