Some work on the about page add the Design(Statistics)

--- a/about.html
+++ b/about.html
@@ -48,8 +48,10 @@
     A block with a class list
     <h3></h3>
     A block with the predictor graph
-    <h2>GradeBook</h2>
+    <h3>GradeBook</h3>
     Marks of students displayed in a spread sheet format
+    <h3>Statistics</h3>
+    Visual representation of the class data(ie Pie charts, etc.)
 </section>
 </body>
 </html>
