Some changes to the team page

--- a/team.html
+++ b/team.html
@@ -29,6 +29,7 @@
     <article class="w3-third">
         <p>Suliman</p>
         <img src="dashboard/assets/img/faces/face-1.jpg" alt="Suliman" style="width:100%">
+        Scrum Master
     </article>
     <article class="w3-third">
         <p>Ntsiki</p>
