Some changes to the team page

--- a/team.html
+++ b/team.html
@@ -27,9 +27,9 @@
 </section>
 <section class="w3-row-padding w3-center w3-light-grey">
     <article class="w3-third">
-        <p>Suliman</p>
+        <p>Suliman (Scrum Master)</p>
         <img src="dashboard/assets/img/faces/face-1.jpg" alt="Suliman" style="width:100%">
-        Scrum Master
+
     </article>
     <article class="w3-third">
         <p>Ntsiki</p>
