Some changes to the team page

--- a/team.html
+++ b/team.html
@@ -27,7 +27,7 @@
 </section>
 <section class="w3-row-padding w3-center w3-light-grey">
     <article class="w3-third">
-        <p>Suliman (Scrum Master)</p>
+        <p>Suliman Momoniat(Scrum Master)</p>
         <img src="dashboard/assets/img/faces/face-1.jpg" alt="Suliman" style="width:100%">
 
     </article>
@@ -36,7 +36,7 @@
         <img src="dashboard/assets/img/faces/face-1.jpg" alt="Ntsiki" style="width:100%">
     </article>
     <article class="w3-third">
-        <p>Lesego</p>
+        <p>Lesego Seritili</p>
         <img src="dashboard/assets/img/faces/face-1.jpg" alt="Lesego" style="width:100%">
     </article>
     <article class="w3-third">
@@ -44,7 +44,7 @@
         <img src="dashboard/assets/img/faces/face-1.jpg" alt="Peace" style="width:100%">
     </article>
     <article class="w3-third">
-        <p>Kyren</p>
+        <p>Kyren Reddy</p>
         <img src="dashboard/assets/img/faces/face-1.jpg" alt="Kyren" style="width:100%">
     </article>
 </section>
