Edited the about page

--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
     at risk of failure so that systems can be put in place to prevent said student from failing.
 
     <h2 class="w3-wide">Architecture description</h2>
+    <img src="img/client-server.gif" alt="client-server">
     This application will follow a client-server model. The server will hold the actual website
     and the code that links to the machine learning algorithm and the plotting tools. When the
     user opens the website they will be greeted by a login screen resembling the Wits Sakai system.
