some work on the about page

--- a/about.html
+++ b/about.html
@@ -27,6 +27,8 @@
     their username and password (should be linked to the Wits system so as to allow lecturers to use
     their Sakai login details). Once successfully logged in, they will be redirected to the dashboard.
     <h3></h3>
+    <img src="img/dashboard_snapshots/dashboard.png" alt = "Dashboard" width="800" height="400">
+    <h2></h2>
     Here they will be able to select from 3 tabs on the left side menu: Dashboard, Grade Book, Statistics.
     On the dashboard page the user will see a block showing information about the currently selected student,
     then another block with their marks, then another block to allow the user to select a new student.
