some work on the about page

--- a/about.html
+++ b/about.html
@@ -34,6 +34,8 @@
     then another block with their marks, then another block to allow the user to select a new student.
     Underneath all this will be a graph plotting the prediction for the current student.
     <h3></h3>
+    <img src="img/dashboard_snapshots/grade_book.png" alt = "gradebook" width="800" height="400">
+    <h2></h2>
     In the Grade Book the user will be able to see the marks of students within a particular class.
     Under the Statistics tab the user will see graphical representations of the classes marks that they select etc.
     They will be able to change the settings for the app under the Settings tab.
