--- a/about.html
+++ b/about.html
@@ -37,6 +37,9 @@
     <img src="img/dashboard_snapshots/grade_book.png" alt = "gradebook" width="800" height="400">
     <h2></h2>
     In the Grade Book the user will be able to see the marks of students within a particular class.
+    <h3></h3>
+    <img src="img/dashboard_snapshots/stats.png" alt = "Statistics" width="800" height="400">
+    <h2></h2>
     Under the Statistics tab the user will see graphical representations of the classes marks that they select etc.
     They will be able to change the settings for the app under the Settings tab.
 
