some work on the about page

--- a/about.html
+++ b/about.html
@@ -41,9 +41,11 @@
     <img src="img/dashboard_snapshots/stats.png" alt = "Statistics" width="800" height="400">
     <h2></h2>
     Under the Statistics tab the user will see graphical representations of the classes marks that they select etc.
-    They will be able to change the settings for the app under the Settings tab.
-
+    <h3>Flow Diagram</h3>
+    <img src="img/diagrams/General%20Flow%20Diagram.png" alt = "Flowdiagram" width="800" height="400">
+    <h2></h2>
     <h2 class="w3-wide">Design</h2>
+
     <h2 >Login</h2>
     An attempt to mimic the look of the Sakai login
     <h2>HomePage</h2>
