some work on the about page

--- a/about.html
+++ b/about.html
@@ -42,8 +42,10 @@
     <h2></h2>
     Under the Statistics tab the user will see graphical representations of the classes marks that they select etc.
     <h3>Flow Diagram</h3>
-    <img src="img/diagrams/General%20Flow%20Diagram.png" alt = "Flowdiagram" width="800" height="400">
+    <img src="img/diagrams/General%20Flow%20Diagram.png" alt = "Flowdiagram" width="800" height="500">
     <h2></h2>
+    <h3>Activity Diagram</h3>
+    <img src="img/diagrams/Grade%20Book%20Activity%20Diagram.png" alt = "Activitydiagram" width="800" height="1400">
     <h2 class="w3-wide">Design</h2>
 
     <h2 >Login</h2>
